# valacraft

./: buildClient  buildServer  meson.build
src/client/: main.vala  meson.build
src/core/: meson.build
src/server/: meson.build
